
- new table extended by an additional stripped down version of the default table and an updated example table (Thanks to BorgDog and Hauntfreaks)
- add nudge test and calibration table (by DJRobX, modded by Sir Cheddar) to tables directory

- stop playing sounds when exiting the sound dialog, or exiting position dialog, or when you pick a different sound

- fix missing kicker holes at inclination values close around 0
- drop target hit event problems fixed

- fix duplicated functions in the script editor dropdown box (which also resulted in a lot of slowdown over time)
- fix some uninitialized dialog state
- fix some more editor crashes

- see core scripts (header of core.vbs) for the respective changelog
- see CommandReference.txt for the changelog of all the scripting properties/interface changes

- DirectX 8 port for input handling (currently disabled)

VP 10.3.1 Changelog
------------------------

- fix some editor crashes
- fix UI rendering of alpha images on Windows XP

- in interactive camera/light editing mode (e.g. launch table with F6 or the respective menu entry) navigating around the table with the arrow keys (and left alt key)
  must now be explicitly enabled in the key preferences dialog

- add Randr's rulers, plus a simple protractor and Rothbauerw's manual ball control script (slightly tweaked) to the default table

VP 10.3.0 Changelog
------------------------

- add new material option for the glossy color: 'Use Image', which allows to configure how much the (optional) image that is attached
  to a scene element is allowed to influence the glossy part of the material (0=no tinting at all from the image, up to 1=same behavior as before/older VPX versions)
- fix 'edge shadowing' issue if a normal map image is used for a scene element

- add new configurable in-game key for a lockbar/fire button (accessible via "LockbarKey" in the script)

- in interactive camera/light editing mode (e.g. launch table with F6 or the respective menu entry):